--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
     </div>
 </body>
 </html>
+<script src="https://telegram.org/js/telegram-web-app.js?58"></script>
 <script>
     const openModalBtn = document.getElementById("openModalBtn");
     const closeModalBtn = document.getElementById("closeModalBtn");
