--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <span class="texts">Канал про Telegram</span>
                     </div>
                     <div class="btn_grid">
-                        <a class="button sd">Открыть</a>
+                        <a class="button sd" href="https://t.me/dronifs">Открыть</a>
                     </div>
 
                     <div class="icon_grid">
@@ -48,7 +48,7 @@
                         <span class="texts">Чатик без правил</span>
                     </div>
                     <div class="btn_grid">
-                        <a class="button sd">Открыть</a>
+                        <a class="button sd" href="https://t.me/dronifs_chat">Открыть</a>
                     </div>
 
                     <div class="icon_grid">
@@ -59,7 +59,7 @@
                         <span class="texts">Мои личные эмодзи</span>
                     </div>
                     <div class="btn_grid">
-                        <a class="button sd">Открыть</a>
+                        <a class="button sd" href="https://t.me/addemoji/GroAlexPixeI">Открыть</a>
                     </div>
 
                     <div class="icon_grid">
@@ -70,7 +70,7 @@
                         <span class="texts">Мой личный канал</span>
                     </div>
                     <div class="btn_grid">
-                        <a class="button sd">Открыть</a>
+                        <a class="button sd" href="https://t.me/drochkov">Открыть</a>
                     </div>
                 </div>
             </div>
