--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <div class="item"><img src="files/img/myavatarka.jpg" alt="ава"><span class="header_text">Алексей Дроков</span></div>
             <p></p>
-            <div class="item"><a class="button huy">Мой профиль</a></div>
+            <div class="item"><a class="button huy" href="https://t.me/whyDrok">Мой профиль</a></div>
         </header>
         <div id="first_info" class="sf first_info">
             <div class="text">
