--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
             <p class="texts">Калькулятор оценок, для получения среднего балла исходя из какого-то определённого количества оценок.</p>
         </div>
         <div id="third_info" class="sf third_info">
+            <div class="img_esc"><img src="files/img/фото Скибиди габва.png" alt="ава"></div>
+            <span class="subtitle">Скибиди габв</span><br>
+            <p class="texts">Игра-кликер про Скибиди Габва, при достижении 1млрд очков, все участники игры получат мишку-подарок Telegram!</p>
+        </div>
+        <div id="third_info" class="sf third_info">
             <div class="img_esc"><img src="files/img/фото EmojiBot.png" alt="ава"></div>
             <span class="subtitle">EmojiBot</span><br>
             <p class="texts">Этот проект в разработке, но вскоре выйдет на свет...</p>
@@ -158,3 +163,4 @@
     document.oncontextmenu = noselect;
     function noselect() {return false;}
 </script>
+
