--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
             <span class="subtitle">GradeCalc  </span><a id="openModalBtn" class="btn">Подробнее</a><br>
             <p class="texts">Калькулятор оценок, для получения среднего балла исходя из какого-то определённого количества оценок.</p>
         </div>
-        <div id="third_info" class="sf third_info">
+        <a href="https://t.me/ScibidiGabovBot"><div id="third_info" class="sf third_info">
             <div class="img_esc"><img src="files/img/фото Скибиди габва.png" alt="ава"></div>
             <span class="subtitle">Скибиди габв  </span><a id="openModalBtn1" class="btn">Подробнее</a><br>
             <p class="texts">Игра-кликер про Скибиди Габва, при достижении 1млрд очков, все участники игры получат мишку-подарок Telegram!</p>
-        </div>
+        </div></a>
         <div id="third_info" class="sf third_info">
             <div class="img_esc"><img src="files/img/фото EmojiBot.png" alt="ава"></div>
             <span class="subtitle">EmojiBot</span><br>
@@ -108,18 +108,9 @@
             <a class="close-button" id="closeModalBtn">Закрыть</a>
         </div>
     </div>
-    <div class="overlay" id="modalOverlay1">
-        <div class="modal">
-            <span class="subtitle">Скибиди габв</span>
-<!--             <p class="texts">У GradeCalc есть собственный сайт, страница в RuStore и канал.</p> -->
-            <a href="https://t.me/ScibidiGabovBot" target="_blank">Ссылка на бота</a><br>
-            <br>
-            <a class="close-button" id="closeModalBtn">Закрыть</a>
-        </div>
-    </div>
 </body>
 </html>
-<script src="https://telegram.org/js/telegram-web-app.js?58"></script>
+<script src="https://telegram.org/js/telegram-web-app.js?59"></script>
 <script>
     const openModalBtn = document.getElementById("openModalBtn");
     const closeModalBtn = document.getElementById("closeModalBtn");
@@ -129,21 +120,16 @@
     openModalBtn.addEventListener("click", function() {
         modalOverlay.style.display = "flex"; // Показываем оверлей
     });
-    openModalBtn1.addEventListener("click", function() {
-        modalOverlay1.style.display = "flex"; // Показываем оверлей
-    });
 
     // Функция для закрытия оверлея
     closeModalBtn.addEventListener("click", function() {
         modalOverlay.style.display = "none"; // Скрываем оверлей
-        modalOverlay1.style.display = "none"; // Скрываем оверлей
     });
 
     // Закрытие при клике вне модального окна
     window.addEventListener('click', function(event) {
-        if (event.target == modalOverlay) or (event.target == modalOverlay1) {
+        if (event.target == modalOverlay) {
             modalOverlay.style.display = "none";
-            modalOverlay1.style.display = "none";
         }
     });
 </script>
@@ -177,5 +163,6 @@
     document.oncontextmenu = noselect;
     function noselect() {return false;}
 </script>
+
 
 
