--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
             <span class="subtitle">GradeCalc  </span><a id="openModalBtn" class="btn">Подробнее</a><br>
             <p class="texts">Калькулятор оценок, для получения среднего балла исходя из какого-то определённого количества оценок.</p>
         </div>
-        <a href="https://t.me/ScibidiGabovBot"><div id="third_info" class="sf third_info">
+        <div id="third_info" class="sf third_info">
             <div class="img_esc"><img src="files/img/фото Скибиди габва.png" alt="ава"></div>
-            <span class="subtitle">Скибиди габв  </span><a id="openModalBtn1" class="btn">Подробнее</a><br>
+            <span class="subtitle">Скибиди габв  </span><a href="https://t.me/ScibidiGabovBot" class="btn">Открыть</a><br>
             <p class="texts">Игра-кликер про Скибиди Габва, при достижении 1млрд очков, все участники игры получат мишку-подарок Telegram!</p>
-        </div></a>
+        </div>
         <div id="third_info" class="sf third_info">
             <div class="img_esc"><img src="files/img/фото EmojiBot.png" alt="ава"></div>
             <span class="subtitle">EmojiBot</span><br>
@@ -163,6 +163,7 @@
     document.oncontextmenu = noselect;
     function noselect() {return false;}
 </script>
+
 
 
 
