--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
                     </div>
 
                     <div class="icon_grid">
-                        <img src="files/img/2.png" alt="ава">
+                        <img src="files/img/4.png" alt="ава">
                     </div>
                     <div class="item_grid">
-                        <span class="subtitle">dronifs chat</span><br>
-                        <span class="texts">Чатик без правил</span>
+                        <span class="subtitle">Канал бота</span><br>
+                        <span class="texts">Канал моего эмодзи-бота</span>
                     </div>
                     <div class="btn_grid">
-                        <a class="button sd" href="https://t.me/dronifs_chat">Открыть</a>
+                        <a class="button sd" href="https://t.me/EmojiBotNews">Открыть</a>
                     </div>
 
                     <div class="icon_grid">
@@ -152,6 +152,7 @@
     document.oncontextmenu = noselect;
     function noselect() {return false;}
 </script>
+
 
 
 
