--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </div>
                     <div class="item_grid">
                         <span class="subtitle">Канал бота</span><br>
-                        <span class="texts">Канал моего эмодзи-бота</span>
+                        <span class="texts">Канал эмодзи-бота</span>
                     </div>
                     <div class="btn_grid">
                         <a class="button sd" href="https://t.me/EmojiBotNews">Открыть</a>
@@ -152,6 +152,7 @@
     document.oncontextmenu = noselect;
     function noselect() {return false;}
 </script>
+
 
 
 
