--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
             <p class="texts">Игра-кликер про Скибиди Габва, при достижении 1млрд очков, все участники игры получат мишку-подарок Telegram!</p>
         </div>
         <div id="third_info" class="sf third_info">
+            <div class="img_esc"><img src="files/img/фото FontsStore.png" alt="ава"></div>
+            <span class="subtitle">GoogleSans  </span><a href="https://t.me/GoogleSansBot" class="btn">Открыть</a><br>
+            <p class="texts">GoogleSans. Это мой простенький бот, для покупки моих любимых шрифтов. Сейчас там 90% скидки!</p>
+        </div>
+        <div id="third_info" class="sf third_info">
             <div class="img_esc"><img src="files/img/фото EmojiBot.png" alt="ава"></div>
             <span class="subtitle">EmojiBot</span><br>
             <p class="texts">Этот проект в разработке, но вскоре выйдет на свет...</p>
@@ -152,6 +157,7 @@
     document.oncontextmenu = noselect;
     function noselect() {return false;}
 </script>
+
 
 
 
