--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div id="third_info" class="sf third_info">
             <div class="img_esc"><img src="files/img/фото FontsStore.png" alt="ава"></div>
             <span class="subtitle">GoogleSans  </span><a href="https://t.me/GoogleSansBot" class="btn">Открыть</a><br>
-            <p class="texts">GoogleSans. Это мой простенький бот, для покупки моих любимых шрифтов. Сейчас там 90% скидки!</p>
+            <p class="texts">GoogleSans. Это простенький бот, для покупки моих любимых шрифтов. Сейчас там 90% скидки!</p>
         </div>
         <div id="third_info" class="sf third_info">
             <div class="img_esc"><img src="files/img/фото EmojiBot.png" alt="ава"></div>
@@ -157,6 +157,7 @@
     document.oncontextmenu = noselect;
     function noselect() {return false;}
 </script>
+
 
 
 
