--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <span class="texts">Канал про Telegram</span>
                     </div>
                     <div class="btn_grid">
-                        <a class="button sd" href="https://t.me/dronifs">Открыть</a>
+                        <a class="button sd" href="https://t.me/dronifs" target="_blank">Открыть</a>
                     </div>
 
                     <div class="icon_grid">
@@ -48,7 +48,7 @@
                         <span class="texts">Канал эмодзи-бота</span>
                     </div>
                     <div class="btn_grid">
-                        <a class="button sd" href="https://t.me/EmojiBotNews">Открыть</a>
+                        <a class="button sd" href="https://t.me/Qjkey" target="_blank">Открыть</a>
                     </div>
 
                     <div class="icon_grid">
@@ -59,7 +59,7 @@
                         <span class="texts">Мои личные эмодзи</span>
                     </div>
                     <div class="btn_grid">
-                        <a class="button sd" href="https://t.me/addemoji/GroAlexPixeI">Открыть</a>
+                        <a class="button sd" href="https://t.me/addemoji/GroAlexPixeI" target="_blank">Открыть</a>
                     </div>
                 </div>
             </div>
@@ -75,12 +75,12 @@
         </div>
         <div id="third_info" class="sf third_info">
             <div class="img_esc"><img src="files/img/фото Скибиди габва.png" alt="ава"></div>
-            <span class="subtitle">Скибиди габв  </span><a href="https://t.me/ScibidiGabovBot" class="btn">Открыть</a><br>
+            <span class="subtitle">Скибиди габв  </span><a href="https://t.me/ScibidiGabovBot" class="btn" target="_blank">Открыть</a><br>
             <p class="texts">Игра-кликер про Скибиди Габва, при достижении 1млрд очков, все участники игры получат мишку-подарок Telegram!</p>
         </div>
         <div id="third_info" class="sf third_info">
             <div class="img_esc"><img src="files/img/фото FontsStore.png" alt="ава"></div>
-            <span class="subtitle">GoogleSans  </span><a href="https://t.me/GoogleSansBot" class="btn">Открыть</a><br>
+            <span class="subtitle">GoogleSans  </span><a href="https://t.me/GoogleSansBot" class="btn" target="_blank">Открыть</a><br>
             <p class="texts">GoogleSans. Это простенький бот, для покупки моих любимых шрифтов. Сейчас там 90% скидки!</p>
         </div>
         <div id="third_info" class="sf third_info">
@@ -157,6 +157,7 @@
     document.oncontextmenu = noselect;
     function noselect() {return false;}
 </script>
+
 
 
 
