--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
                     </div>
 
                     <div class="icon_grid">
-                        <img src="files/img/4.png" alt="ава">
+                        <img src="files/img/5.png" alt="ава">
                     </div>
                     <div class="item_grid">
-                        <span class="subtitle">Канал бота</span><br>
-                        <span class="texts">Канал эмодзи-бота</span>
+                        <span class="subtitle">Qjkey</span><br>
+                        <span class="texts">Новости ботов</span>
                     </div>
                     <div class="btn_grid">
                         <a class="button sd" href="https://t.me/Qjkey" target="_blank">Открыть</a>
@@ -157,6 +157,7 @@
     document.oncontextmenu = noselect;
     function noselect() {return false;}
 </script>
+
 
 
 
