--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
--<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -13,7 +13,6 @@
             <div class="item"><img src="files/img/myavatarka.jpg" alt="ава"><span class="header_text">Алексей Дроков</span></div>
             <p></p>
             <div class="item"><a class="button huy" href="javascript:Telegram.WebApp.openTelegramLink('https://t.me/whyDrok');">Мой профиль</a></div> 
-            <!-- href="https://t.me/whyDrok" -->
         </header>
         <div id="first_info" class="sf first_info">
             <div class="text">
@@ -158,6 +157,7 @@
     document.oncontextmenu = noselect;
     function noselect() {return false;}
 </script>
+
 
 
 
