--- a/index.html
+++ b/index.html
@@ -93,13 +93,11 @@
     <br>
     <div class="overlay" id="modalOverlay">
         <div class="modal">
-            <span class="subtitle">GradeCalc</span>
-            <p class="texts">У GradeCalc есть собственный сайт, страница в RuStore и канал.</p>
-            <a href="https://qjkey.github.io/GradeCalc/" target="_blank">Сайт GradeCalc</a><br>
-            <a href="https://www.rustore.ru/catalog/app/appinventor.ai_alexeysgrokholskiy.GradeCalc_10" target="_blank">Скачать из RuStore</a><br>
-            <a href="javascript:Telegram.WebApp.openTelegramLink('https://t.me/GradeCalc');">Канал GradeCalc</a><br>
-            <br>
-            <a class="close-button" id="closeModalBtn">Закрыть</a>
+            <span class="title">GradeCalc  </span><a class="close-button" id="closeModalBtn">Закрыть</a>
+            <p class="text">У GradeCalc есть собственный сайт, страница в RuStore и канал.</p>
+            <a class="sbutton first" href="https://qjkey.github.io/GradeCalc/" target="_blank">Сайт GradeCalc</a><br>
+            <a class="sbutton pi" href="https://www.rustore.ru/catalog/app/appinventor.ai_alexeysgrokholskiy.GradeCalc_10" target="_blank">Скачать из RuStore</a><br>
+            <a class="sbutton po" href="javascript:Telegram.WebApp.openTelegramLink('https://t.me/GradeCalc');">Канал GradeCalc</a><br>
         </div>
     </div>
 </body>
@@ -157,17 +155,3 @@
     document.oncontextmenu = noselect;
     function noselect() {return false;}
 </script>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
