--- a/index.html
+++ b/index.html
@@ -41,6 +41,17 @@
                     </div>
 
                     <div class="icon_grid">
+                        <img src="files/img/4.png" alt="ава">
+                    </div>
+                    <div class="item_grid">
+                        <span class="subtitle">Мои эмодзи</span><br>
+                        <span class="texts">Все мои эмодзи</span>
+                    </div>
+                    <div class="btn_grid">
+                        <a class="button sd" href="javascript:Telegram.WebApp.openTelegramLink('https://t.me/Emoji_qbot?startapp=user_5380175061');">Профиль</a>
+                    </div>
+                    
+                    <div class="icon_grid">
                         <img src="files/img/5.png" alt="ава">
                     </div>
                     <div class="item_grid">
@@ -49,17 +60,6 @@
                     </div>
                     <div class="btn_grid">
                         <a class="button sd" href="javascript:Telegram.WebApp.openTelegramLink('https://t.me/Qjkey');">Открыть</a>
-                    </div>
-
-                    <div class="icon_grid">
-                        <img src="files/img/4.png" alt="ава">
-                    </div>
-                    <div class="item_grid">
-                        <span class="subtitle">Эмодзи</span><br>
-                        <span class="texts">Мои личные эмодзи</span>
-                    </div>
-                    <div class="btn_grid">
-                        <a class="button sd" href="javascript:Telegram.WebApp.openTelegramLink('https://t.me/addemoji/GroAlexPixeI');">Открыть</a>
                     </div>
                 </div>
             </div>
@@ -155,5 +155,6 @@
     document.oncontextmenu = noselect;
     function noselect() {return false;}
 </script>
+
 
 
