--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
   bottom: 0;
   border-radius: inherit;
   pointer-events: none;
-  box-shadow: inset 0 0 15px 0px #ffffff57;
+  opacity: 0.5;
+  box-shadow: inset 0 0 15px 0px var(--tg-theme-text-color);
   background-color: rgba(255, 255, 255, 0);
   z-index: 0;
 }
@@ -99,7 +100,7 @@
     bottom: 0;
     border-radius: inherit;
     pointer-events: none;
-    box-shadow: inset 0 0 20px 0px #ffffff;
+    box-shadow: inset 0 0 20px 0px #ffffff25;
     background-color: rgba(255, 255, 255, 0);
     z-index: 0;
   }
@@ -230,7 +231,7 @@
     <br>
     <br>
     <div class="overlay" id="modalOverlay">
-        <div class="modal">
+        <div class="modal liquid-glass">
             <span class="title">GradeCalc  </span><a class="close-button" id="closeModalBtn">Закрыть</a>
             <p class="textss">У GradeCalc есть собственный сайт, страница в RuStore и канал.</p>
             <a class="sbutton first" href="https://qjkey.github.io/GradeCalc/" target="_blank">Сайт GradeCalc</a><br>
