--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 
 
+  
 <svg
   xmlns="http://www.w3.org/2000/svg"
   width="0"
@@ -57,7 +58,7 @@
   border-radius: inherit;
   pointer-events: none;
   opacity: 0.5;
-  box-shadow: inset 0 0 15px 0px var(--tg-theme-text-color);
+  box-shadow: inset 0 0 8px 0px var(--tg-theme-text-color);
   background-color: rgba(255, 255, 255, 0);
   z-index: 0;
 }
@@ -180,6 +181,17 @@
                     </div>
 
                     <div class="icon_grid">
+                        <img src="files/img/4.png" alt="ава">
+                    </div>
+                    <div class="item_grid">
+                        <span class="subtitle">Эмодзи</span><br>
+                        <span class="texts">Профиль в эмодзи</span>
+                    </div>
+                    <div class="btn_grid">
+                        <a class="button sd" href="https://t.me/Emoji_qbot?startapp=user_5380175061">Профиль</a>
+                    </div>
+
+                    <div class="icon_grid">
                         <img src="files/img/5.png" alt="ава">
                     </div>
                     <div class="item_grid">
@@ -188,17 +200,6 @@
                     </div>
                     <div class="btn_grid">
                         <a class="button sd" href="javascript:Telegram.WebApp.openTelegramLink('https://t.me/Qjkey');">Открыть</a>
-                    </div>
-
-                    <div class="icon_grid">
-                        <img src="files/img/4.png" alt="ава">
-                    </div>
-                    <div class="item_grid">
-                        <span class="subtitle">Эмодзи</span><br>
-                        <span class="texts">Мои личные эмодзи</span>
-                    </div>
-                    <div class="btn_grid">
-                        <a class="button sd" href="javascript:Telegram.WebApp.openTelegramLink('https://t.me/addemoji/GroAlexPixeI');">Открыть</a>
                     </div>
                 </div>
             </div>
