--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
     <div class="main">
         <header class="liquid-glass">
-            <div class="item"><img src="files/img/myavatarka.jpg" alt="ава"><span class="header_text">Алексей Дроков</span></div>
+            <div class="item"><img src="https://t.me/i/userpic/320/cMHhnvlfBklbF0hkKyF87bqGUt-ocTTwTz4Bax86be0AYE9xNl6anctdc5s3pZBv.svg" alt="ава"><span class="header_text">Алексей Дроков</span></div>
             <p></p>
             <div class="item"><a class="button huy" href="javascript:Telegram.WebApp.openTelegramLink('https://t.me/whyDrok');">Мой профиль</a></div> 
         </header>
@@ -295,3 +295,4 @@
     document.oncontextmenu = noselect;
     function noselect() {return false;}
 </script>
+
